# freetype-java

./: .gitattributes  .gitignore  README.md  pom.xml
src/main/java/me/mat/freetype/: FreeType.java  FreeTypeHandle.java
src/main/java/me/mat/freetype/font/: Bitmap.java  CharMap.java  Face.java
src/main/java/me/mat/freetype/font/face/: BBox.java  Face.java
src/main/java/me/mat/freetype/font/glyph/: Advance.java  Glyph.java  GlyphGenerator.java  GlyphMetrics.java  GlyphSlot.java
src/main/java/me/mat/freetype/font/kerning/: Kerning.java  KerningMode.java
src/main/java/me/mat/freetype/font/size/: Size.java  SizeMetrics.java  SizeRequest.java  SizeRequestType.java
src/main/java/me/mat/freetype/util/: MemoryClass.java  OperatingSystem.java
src/main/java/me/mat/freetype/util/constants/: FRRenderMode.java  FTKerningMode.java  FTSizeRequestType.java
src/main/native/: CMakeLists.txt
src/main/native/src/: main.cpp
src/main/native/src/class/: class.cpp  class.h
src/main/native/src/class/impl/: bbox.cpp  bbox.h  bitmap.cpp  bitmap.h  char_map.cpp  char_map.h  face.cpp  face.h  free_type.cpp  free_type.h  freetype_handle.cpp  freetype_handle.h  glyph_metrics.cpp  glyph_metrics.h  glyph_slot.cpp  glyph_slot.h  memory_class.cpp  memory_class.h  size.cpp  size.h  size_metrics.cpp  size_metrics.h
src/test/java/me/mat/freetype/: FreeTypeTest.java
